force-app/main/default/objects/LLC_BI__Underwriting_Bundle__c/fields/LLC_BI__Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Description__c</fullName>
    <description>This field is optional. It is populated through the Salesforce layout. This text is used to describe the purpose of the underwriting bundle. Any text in this field will be displayed when selecting an underwriting bundle for a relationship.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>