force-app/main/default/objects/LLC_BI__Underwriting_Bundle__c/fields/LLC_BI__Financial_Consolidation__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Financial_Consolidation__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>The system automatically populates this optional lookup field to specify the financial consolidation associated to the underwriting bundle. By default, it is blank.</description>
    <label>Financial Consolidation</label>
    <referenceTo>LLC_BI__Financial_Consolidation__c</referenceTo>
    <relationshipLabel>Underwriting Bundle</relationshipLabel>
    <relationshipName>Underwriting_Bundle</relationshipName>
    <type>Lookup</type>
</CustomField>