force-app/main/default/objects/LLC_BI__Underwriting_Bundle__c/fields/LLC_BI__Import_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Import_Data_Source__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>The data source used for importing spreads data directly into the bundle.</description>
    <label>Import Data Source</label>
    <referenceTo>LLC_BI__Data_Source__c</referenceTo>
    <relationshipLabel>Underwriting Bundle</relationshipLabel>
    <relationshipName>Underwriting_Bundle</relationshipName>
    <type>Lookup</type>
</CustomField>