force-app/main/default/objects/LLC_BI__Underwriting_Bundle__c/fields/LLC_BI__Is_Disabled__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This defaults to false. Disabled templates are not visible in the underwriting start application.</description>
    <inlineHelpText>Disabled templates are not visible in the underwriting start application.</inlineHelpText>
    <label>Is Disabled</label>
    <type>Checkbox</type>
</CustomField>