force-app/main/default/objects/LLC_BI__Underwriting_Bundle__c/fields/LLC_BI__Is_Template__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Template__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This defaults to false. Determines whether or not this bundle can be used as a template for Relationship specific bundles.</description>
    <inlineHelpText>Determines whether or not this bundle can be used as a template for Relationship specific bundles.</inlineHelpText>
    <label>Is Template</label>
    <type>Checkbox</type>
</CustomField>