force-app/main/default/objects/LLC_BI__Underwriting_Bundle__c/fields/LLC_BI__Migration_Target__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Migration_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this optional lookup field to signify bundles that need to migrate and the destination of the bundle. By default, it is blank.</description>
    <label>Migration Target</label>
    <referenceTo>LLC_BI__Underwriting_Bundle__c</referenceTo>
    <relationshipLabel>Migration Target Bundles</relationshipLabel>
    <relationshipName>Migration_Target_Bundles</relationshipName>
    <type>Lookup</type>
</CustomField>