force-app/main/default/objects/LLC_BI__Underwriting_Bundle__c/fields/LLC_BI__Relationship__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Relationship__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is required and automatically updated. Relationship to which this bundle belongs.</description>
    <inlineHelpText>Relationship to which this bundle belongs.</inlineHelpText>
    <label>Relationship</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Underwriting Bundle</relationshipLabel>
    <relationshipName>Underwriting_Bundle</relationshipName>
    <type>Lookup</type>
</CustomField>