force-app/main/default/objects/LLC_BI__Underwriting_Bundle__c/fields/LLC_BI__Selected_Scale__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Selected_Scale__c</fullName>
    <description>This field is used to determine to what degree of accuracy should record values be printed or displayed.</description>
    <label>Selected Scale</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$</fullName>
                <default>true</default>
                <label>$</label>
            </value>
            <value>
                <fullName>m</fullName>
            </value>
            <value>
                <fullName>mm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>