force-app/main/default/objects/LLC_BI__Underwriting_Bundle__c/fields/LLC_BI__Source_Template__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Source_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system populates this lookup field with the Underwriting Bundle template.</description>
    <label>Source Template</label>
    <referenceTo>LLC_BI__Underwriting_Bundle__c</referenceTo>
    <relationshipLabel>Cloned Bundles</relationshipLabel>
    <relationshipName>Cloned_Bundles</relationshipName>
    <type>Lookup</type>
</CustomField>